@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $bindir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.02';
+my $version = '1.03';
 ($libdir, $bindir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -256,12 +256,12 @@ sub check_kit {
 	print STDERR "Checking your kit ... ";
 
 	my %file_sizes = (
-		'README', 1413,
-		'Changes', 339,
+		'README', 1415,
+		'Changes', 488,
 		'MANIFEST', 86,
-		'Evol.pm', 17806,
-		'bin/ps_evol', 3775,
-		'Clui', 31705,
+		'Evol.pm', 17791,
+		'bin/ps_evol', 3818,
+		'Clui', 31718,
 		'test.pl', 3750,
 	);
 
