@@ -33,4 +33,4 @@ that's all ! or you can still do it the old way ...
 For up-to-date source, see http://www.cpan.org/SITES.html
 and look for the directory authors/id/P/PJ/PJB
 
-Peter J Billam    computing@pjb.com.au    http://www.pjb.com.au
+Peter J Billam   peter.billam@pjb.com.au    http://www.pjb.com.au
